[tool.poetry]
name = "landscape"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^0.20.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
